<resources>
    <string name="app_name">Calculator</string>
    <string name="app_name_danfa">Mi Calculator</string>
    <string name="cal_convert_to_word_figure">Convert to financial characters</string>
    <string name="cal_copy">Copy</string>
    <string name="cal_edit_mode">Edit mode</string>
    <string name="cal_result_format">= %s</string>
    <string name="cal_text_copied">Text copied</string>
    <string name="choose_currency">Select currency</string>
    <string name="choose_unit">Select unit</string>
    <string name="city">City</string>
    <string name="clearDesc">clear</string>
    <string name="clear_history">Clear history</string>
    <string name="combine_loan">Combined loan</string>
    <string name="commercial_loan">Commercial loan</string>
    <string name="convert_currency">Currency converter</string>
    <string name="convertion_unit">Unit converter</string>
    <string name="convertion_unit_area">Area converter</string>
    <string name="convertion_unit_length">Length converter</string>
    <string name="convertion_unit_temperature">Temperature converter</string>
    <string name="convertion_unit_time">Time converter</string>
    <string name="convertion_unit_velocity">Speed converter</string>
    <string name="convertion_unit_volume">Volume converter</string>
    <string name="convertion_unit_weight">Mass converter</string>
    <string name="cos">cos</string>
    <string name="cosDesc">cosine</string>
    <string name="currency_update_time_format">Exchange rates are provided by webull (%s)</string>
    <string name="current_rate_remind_commercial" />
    <string name="current_rate_remind_fund" />
    <string name="dateformat">MM/dd/yyyy</string>
    <string name="day">day</string>
    <string name="digit0">0</string>
    <string name="digit1">1</string>
    <string name="digit2">2</string>
    <string name="digit3">3</string>
    <string name="digit4">4</string>
    <string name="digit5">5</string>
    <string name="digit6">6</string>
    <string name="digit7">7</string>
    <string name="digit8">8</string>
    <string name="digit9">9</string>
    <string name="divDesc">divide</string>
    <string name="dotDesc">point</string>
    <string name="e">e</string>
    <string name="eDesc">"Euler's number"</string>
    <string name="equalDesc">equals</string>
    <string name="error">Error</string>
    <string name="error_fomrat">Format error</string>
    <string name="factorialDesc">factorial</string>
    <string name="fund" />
    <string name="fund_loan" />
    <string name="home_title_calculator">Calculator</string>
    <string name="income_type" />
    <string name="item_title_aa_payment">Split the bill</string>
    <string name="item_title_area_conversion">Area</string>
    <string name="item_title_calculator">Calculator</string>
    <string name="item_title_currency">Currency</string>
    <string name="item_title_dress_size">Clothing size</string>
    <string name="item_title_length_conversion">Length</string>
    <string name="item_title_mortgage">Mortgage</string>
    <string name="item_title_scientific_calculator">Scientific</string>
    <string name="item_title_tax">Taxes</string>
    <string name="item_title_temprature_conversion">Temperature</string>
    <string name="item_title_time_conversion">Time</string>
    <string name="item_title_tip">Tip</string>
    <string name="item_title_vel_conversion">Speed</string>
    <string name="item_title_volume_conversion">Volume</string>
    <string name="item_title_weight_conversion">Mass</string>
    <string name="leftParen">(</string>
    <string name="leftParenDesc">left parenthesis</string>
    <string name="lg">lg</string>
    <string name="lgDesc">logarithm</string>
    <string name="ln">ln</string>
    <string name="lnDesc">natural logarithm</string>
    <string name="loan_edittext_hint_commercial">Enter amount</string>
    <string name="loan_edittext_hint_commercial_combined">Commercial</string>
    <string name="loan_edittext_hint_fund">Enter amount</string>
    <string name="loan_edittext_hint_fund_combined">Fund loan</string>
    <string name="loan_first_pay_date">First payment</string>
    <string name="loan_interest_rate">Interest</string>
    <string name="loan_pay_years">Loan period</string>
    <string name="loan_payback_way">Repayment</string>
    <string name="loan_unit">×10K</string>
    <string name="minusDesc">minus</string>
    <string name="month" />
    <string name="mortgage_amount">Total</string>
    <string name="mortgage_average_repayment_first_month">First month repayment</string>
    <string name="mortgage_average_repayment_monthly">Monthly repayment</string>
    <string name="mortgage_calculate">Calculate</string>
    <string name="mortgage_descript_accumulation">Interest rate: %s (fund)</string>
    <string name="mortgage_descript_commercial">Interest rate: %s (commercial)</string>
    <string name="mortgage_detail_month">Month</string>
    <string name="mortgage_detail_monthly_interest">Interest</string>
    <string name="mortgage_detail_monthly_principal">Principal</string>
    <string name="mortgage_detail_monthly_remain">Remaining</string>
    <string name="mortgage_detail_monthly_repayment">Repayment</string>
    <string name="mortgage_detail_yearly_interest">Interest</string>
    <string name="mortgage_detail_yearly_repayment">Repayment</string>
    <string name="mortgage_details">Mortgage details</string>
    <string name="mortgage_hint_accumulation_fund">Enter amount</string>
    <string name="mortgage_hint_commercial">Enter amount</string>
    <string name="mortgage_hint_loan">Enter amount</string>
    <string name="mortgage_input_error">Enter amount</string>
    <string name="mortgage_interest_amount">Interest amount</string>
    <string name="mortgage_interest_rate">Interest</string>
    <string name="mortgage_item_repayment">Repayment method</string>
    <string name="mortgage_item_start_time">Start date</string>
    <string name="mortgage_item_years">Mortgage period</string>
    <string name="mortgage_loans_amount">Mortgage amount</string>
    <string name="mortgage_repayment_amount">Repayment amount</string>
    <string name="mortgage_result">Results</string>
    <string name="mortgage_show_details">Show details</string>
    <string name="mortgage_tab_accumulation_fund">Fund</string>
    <string name="mortgage_tab_combining_loan">Hybrid</string>
    <string name="mortgage_tab_commercial_loan">Commercial</string>
    <string name="mortgage_years_amount">Mortgage period</string>
    <string name="mulDesc">multiply</string>
    <string name="network_confirm_content">"Currency converter, tax and mortgage calculators need to use your device's network connection and location service to work normally."</string>
    <string name="network_confirm_title">Permissions required</string>
    <string name="piDesc">pi</string>
    <string name="plusDesc">plus</string>
    <string name="powerDesc">power</string>
    <string name="preference_about_calculator">About Calculator</string>
    <string name="preference_alert_follow_qq_group">Copy and paste into QQ to feedback</string>
    <string name="preference_alert_follow_wechat">Copy and paste into WeChat to follow</string>
    <string name="preference_alert_follow_wechat_button">Copy</string>
    <string name="preference_check_update_summary_current_version">Current version：%s</string>
    <string name="preference_check_update_summary_new_version">Has new version：%s</string>
    <string name="preference_check_update_title">Check for updates</string>
    <string name="preference_feedback_title">FAQ</string>
    <string name="preference_follow_qq_group">QQ Group:523274279</string>
    <string name="preference_follow_us">Follow us</string>
    <string name="preference_follow_web_title">Official website</string>
    <string name="preference_follow_wechat_title">WeChat</string>
    <string name="preference_follow_weibo_title">Sina Weibo</string>
    <string name="preference_settings">Settings</string>
    <string name="preference_use_degress_summary">Substitute radians with angles in trigonometric functions</string>
    <string name="preference_use_degress_title">Use angles</string>
    <string name="rate_data_provider">Interest rates are provided by hexun.com</string>
    <string name="rightParen">)</string>
    <string name="rightParenDesc">right parenthesis</string>
    <string name="sin">sin</string>
    <string name="sinDesc">sine</string>
    <string name="social_security" />
    <string name="sqrtDesc">square root</string>
    <string name="start_calculate" />
    <string name="tan">tan</string>
    <string name="tanDesc">tangent</string>
    <string name="tax_accumulation_fund">Accumulation fund</string>
    <string name="tax_annual_bonus_hint">Enter your bonus before tax</string>
    <string name="tax_annual_bonus_number">Bonus</string>
    <string name="tax_birth">Birth</string>
    <string name="tax_cal_method_annual">Annual bonus calculation</string>
    <string name="tax_cal_method_fixed_salary">Income tax calculation</string>
    <string name="tax_cal_method_format">Personal input: %s</string>
    <string name="tax_city">City</string>
    <string name="tax_city_error">Enter correct city</string>
    <string name="tax_city_located">Location</string>
    <string name="tax_city_picker">City</string>
    <string name="tax_edittext_hint" />
    <string name="tax_endowment">Retirement fund</string>
    <string name="tax_fixed_salary_hint">Enter your income before tax</string>
    <string name="tax_income_before_tax">Before tax</string>
    <string name="tax_income_error">Enter correct income amount</string>
    <string name="tax_income_number">Income</string>
    <string name="tax_income_type">Income type</string>
    <string name="tax_income_type_annual_bonus">Annual bonus</string>
    <string name="tax_income_type_fixed_monthly_salary">Monthly salary</string>
    <string name="tax_individual_income_tax">Individual income tax</string>
    <string name="tax_individual_income_tax_result">Results</string>
    <string name="tax_injury">Injury</string>
    <string name="tax_insurance_and_fund">Insurance</string>
    <string name="tax_last_salary_hint">Enter your income</string>
    <string name="tax_last_salary_number">Income</string>
    <string name="tax_medical">Medical</string>
    <string name="tax_param_error">Enter correct insurance rates</string>
    <string name="tax_result_real_get">After tax</string>
    <string name="tax_social_insurance">Social insurance</string>
    <string name="tax_thershold_foreign">%s (Foreign nationals)</string>
    <string name="tax_thershold_native">%s (Mainland China)</string>
    <string name="tax_unemployment">Unemployment</string>
    <string name="times" />
    <string name="unit_yuan">CNY</string>
    <string name="chinese_character_cross_check">互查</string>
    <string name="chinese_character_daughter">女</string>
    <string name="chinese_character_elder_brother">兄</string>
    <string name="chinese_character_elder_sister">姐</string>
    <string name="chinese_character_father">父</string>
    <string name="chinese_character_husband">夫</string>
    <string name="chinese_character_mother">母</string>
    <string name="chinese_character_son">子</string>
    <string name="chinese_character_wife">妻</string>
    <string name="chinese_character_younger_brother">弟</string>
    <string name="chinese_character_younger_sister">妹</string>
    <string name="date_picker_label_day" />
    <string name="date_picker_label_month" />
    <string name="date_picker_label_year" />
    <string name="equal">=</string>
    <string name="mortgage_equals">=</string>
    <string name="mul">×</string>
    <string name="percentage">%</string>
    <string name="preference_follow_web_summary">www.miui.com</string>
    <string name="preference_follow_wechat_summary">MIUI</string>
    <string name="preference_follow_weibo_summary">\@MIUI</string>
</resources>