<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="11" android:layout_gravity="1" android:orientation="0" android:layout_width="-1" android:layout_height="-1"
    <LinearLayout android:gravity="11" android:orientation="0" android:id="@id/pickers" android:layout_width="-2" android:layout_height="-2" android:layout_weight="1.0">
        <com.miui.support.widget.NumberPicker android:id="@id/month" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="-2" android:layout_height="-2" android:text="@string/date_picker_label_month" android:layout_weight="1.0" />
        <com.miui.support.widget.NumberPicker android:id="@id/day" android:focusable="false" android:focusableInTouchMode="false" android:layout_width="-2" android:layout_height="-2" android:text="@string/date_picker_label_day" android:layout_weight="1.0" />
        <com.miui.support.widget.NumberPicker android:id="@id/year" android:focusable="false" android:focusableInTouchMode="false" android:layout_width="-2" android:layout_height="-2" android:text="@string/date_picker_label_year" android:layout_weight="1.0" />
    </LinearLayout>
</LinearLayout>
