<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="0" android:layout_width="-1" android:layout_height="-2">
    <TextView android:gravity="11" android:id="@id/tv_interest_rate_text" android:layout_width="-2" android:layout_height="@dimen/martgage_item_height" android:text="@string/loan_interest_rate" style="@style/CalTextAppearance_List_Primary" />
    <LinearLayout android:orientation="1" android:layout_width="-2" android:layout_height="-2">
        <RelativeLayout android:id="@id/rl_rate_commercial" android:layout_width="-2" android:layout_height="@dimen/martgage_item_height">
            <EditText android:gravity="11" android:id="@id/et_loan_rate" android:background="@drawable/edt_focusable" android:layout_width="@dimen/martgage_loan_et_width" android:layout_height="-1" android:maxLength="10" android:inputType="2002" />
            <TextView android:gravity="11" android:layout_gravity="800005" android:layout_width="-2" android:layout_height="-1" android:text="@string/percentage" android:layout_alignParentTop="true" />
            <TextView android:gravity="11" android:id="@id/tv_multipy" android:layout_width="-2" android:layout_height="-1" android:text="@string/mul" />
            <EditText android:gravity="11" android:id="@id/et_loan_times" android:background="@drawable/edt_focusable" android:layout_width="@dimen/martgage_loan_et_width" android:layout_height="-1" android:maxLength="10" android:inputType="2002" />
            <TextView android:gravity="11" android:layout_gravity="800005" android:layout_width="-2" android:layout_height="-1" android:text="@string/times" android:layout_alignParentTop="true" />
            <TextView android:gravity="11" android:layout_gravity="800005" android:id="@id/tv_symbols_equal" android:layout_width="-2" android:layout_height="-1" android:text="@string/equal" android:layout_alignParentTop="true" />
            <TextView android:gravity="11" android:layout_gravity="800005" android:id="@id/tv_result_commercial" android:layout_width="-2" android:layout_height="-1" android:layout_alignParentTop="true" />
        </RelativeLayout>
        <TextView android:gravity="11" android:id="@id/tv_current_rate" android:layout_width="-2" android:layout_height="-2" android:layout_marginTop="@dimen/martgage_gap" android:text="@string/current_rate_remind_commercial" />
        <RelativeLayout android:id="@id/rl_rate_fund" android:layout_width="-2" android:layout_height="@dimen/martgage_item_height">
            <TextView android:gravity="11" android:id="@id/tv_loan_rate_fund" android:layout_width="@dimen/martgage_loan_et_width" android:layout_height="-1" />
            <TextView android:gravity="11" android:layout_gravity="800005" android:layout_width="-2" android:layout_height="-1" android:text="@string/percentage" android:layout_alignParentTop="true" />
            <TextView android:gravity="11" android:id="@id/tv_multipy_fund" android:layout_width="-2" android:layout_height="-1" android:text="@string/mul" />
            <EditText android:gravity="11" android:id="@id/et_loan_times_fund" android:background="@drawable/edt_focusable" android:layout_width="@dimen/martgage_loan_et_width" android:layout_height="-1" android:maxLength="10" android:inputType="2002" />
            <TextView android:gravity="11" android:layout_gravity="800005" android:layout_width="-2" android:layout_height="-1" android:text="@string/times" android:layout_alignParentTop="true" />
            <TextView android:gravity="11" android:layout_gravity="800005" android:id="@id/tv_symbols_equal_fund" android:layout_width="-2" android:layout_height="-1" android:text="@string/equal" android:layout_alignParentTop="true" />
            <TextView android:gravity="11" android:layout_gravity="800005" android:id="@id/tv_result_fund" android:layout_width="-2" android:layout_height="-1" android:layout_alignParentTop="true" />
        </RelativeLayout>
        <TextView android:gravity="11" android:id="@id/tv_current_rate_fund" android:layout_width="-2" android:layout_height="-2" android:layout_marginTop="@dimen/martgage_gap" android:text="@string/current_rate_remind_fund" />
    </LinearLayout>
</LinearLayout>
